# Particle_Animator

./: Cargo.toml  README.md  rustfmt.toml  todo.txt
.cargo/: config.toml
bench/: bench.rs
benches/: bench.rs
scripts/: inline_sweeper.py
src/: add.txt  lib.rs  main.rs
test/: test.rs
tests/: test.rs
