[package]
name = "ParticleAnimatorRust"
version = "0.1.1"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12" }
chrono = { version = "0.4.42" }
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = { version = "0.5" }
image = { version = "0.25.8" }
indicatif = { version = "0.18.2" }
num_cpus = { version = "1.17.0" }
rand = { version = "0.9.2" }
rayon = { version = "1.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
mimalloc = "0.1"

[profile.release]
opt-level = 3                # maximize LLVM optimizations for runtime speed
lto = "fat"                  # full LTO (whole-program optimizations at link time)
codegen-units = 1            # single codegen unit => best cross-function inlining
debug = 0                    # no debug info in final binary
incremental = false          # turn off incremental compilation for a clean full-optim build
overflow-checks = false      # remove integer overflow checks for speed (unsafe if overflows may occur)
panic = "abort"              # abort on panic (no unwinding overhead)
strip = "symbols"            # strip symbols from the final binary to reduce size