[package]
name = "particleanimatorrust"
version = "0.1.1"
edition = "2021"

[dependencies]
ahash = { version = "0.8.12" }
chrono = { version = "0.4.42" }
clap = { version = "4.5.51", features = ["derive"] }
crossbeam-channel = { version = "0.5.15" }
image = { version = "0.25.8" }
indicatif = { version = "0.18.2" }
num_cpus = { version = "1.17.0" }
rayon = { version = "1.11.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
mimalloc =  { version = "0.1.48" }

[dev-dependencies]
criterion = { version = "0.7.0" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 0
incremental = false
overflow-checks = false
strip = true

[profile.bench]
inherits = "release"
debug = true
overflow-checks = true
strip = "none"

[profile.dev]
opt-level = 1
debug = 2
overflow-checks = true
incremental = true
panic = "unwind"
strip = "none"

[profile.test]
inherits = "dev"
debug = true
overflow-checks = true
panic = "unwind"
strip = "none"

